--- a/SAF.Web/Views/Propuesta/VerPropuesta.cshtml
+++ b/SAF.Web/Views/Propuesta/VerPropuesta.cshtml
@@ -11,6 +11,43 @@
 @Html.HiddenFor(c => c.CODPRO)
 @Html.HiddenFor(c => c.ESTPRO)
 
+<style type="text/css">
+    body {
+        font-family: Helvetica, Arial, sans-serif;
+        font-size: 13px;
+        padding: 0 0 50px 0;
+    }
+
+    .contain {
+        width: 800px;
+        margin: 0 auto;
+    }
+
+    h1 {
+        margin: 40px 0 20px 0;
+    }
+
+    h2 {
+        font-size: 1.5em;
+        padding-bottom: 3px;
+        border-bottom: 1px solid #DDD;
+        margin-top: 50px;
+        margin-bottom: 25px;
+    }
+
+    table th:first-child {
+        width: 150px;
+    }
+    /* Bootstrap 3.x re-reset */
+    .fn-gantt *,
+    .fn-gantt *:after,
+    .fn-gantt *:before {
+        -webkit-box-sizing: content-box;
+        -moz-box-sizing: content-box;
+        box-sizing: content-box;
+    }
+</style>
+
 <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#tabsInfoSoa" aria-controls="home" role="tab" data-toggle="tab">Informacion de la Sociedad Auditoria</a></li>
     <li role="presentation"><a href="#tabsRetribucion" aria-controls="profile" role="tab" data-toggle="tab">Retribucion y Sustentos de la Sociedad</a></li>
@@ -293,7 +330,7 @@
 
 <div class="modal fade" id="modalAsignaFechasAuditor" tabindex="-1" role="dialog" aria-hidden="true"></div>
 <div class="modal fade" id="modalGanttAuditoria" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> × </button>
@@ -494,16 +531,18 @@
                         source: result,
                         navigate: "scroll",
                         maxScale: "hours",
-                        itemsPerPage: 10
+                        itemsPerPage: 10,
+                        months: ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"],
+                        dow: ["D", "L", "M", "M", "J", "V", "S"],
                     });
+                    prettyPrint();
                     /*$(".gantt").popover({
                         selector: ".bar",
                         title: "I'm a popover",
                         content: "And I'm the content of said popover.",
                         trigger: "hover"
                     });*/
-                    $("#modalGanttAuditoria").modal();                    
-                    prettyPrint();
+                    $("#modalGanttAuditoria").modal();                                        
                 }
             });
         };
