--- a/SAF.Web/Views/InvitacionAuditor/_BusquedaAuditores.cshtml
+++ b/SAF.Web/Views/InvitacionAuditor/_BusquedaAuditores.cshtml
@@ -194,7 +194,7 @@
                     "sClass": "center",
                     "sWidth": "5%",
                     "render": function (data, type, row) {
-                        return "<input type='checkbox' value='" + row[0] + "#" + row[7] + "' />"
+                        return "<input type='checkbox' name='chkAuditorServicio' value='" + row[0] + "#" + row[7] + "' />"
                     }
                 },
                 { "sTitle": "Auditor" },
