--- a/SAF.Web/Views/Solicitud/_experiencia.cshtml
+++ b/SAF.Web/Views/Solicitud/_experiencia.cshtml
@@ -82,6 +82,21 @@
     </div>
 }
 <script type="text/javascript" language="javascript">
+
+    $(document).ready(function () {
+        $('#fechaInicioSolExp').datepicker({
+            format: "dd/mm/yyyy"
+        }).next().on(ace.click_event, function () {
+            $(this).prev().focus();
+        });
+
+        $('#fechaFinSolExp').datepicker({
+            format: "dd/mm/yyyy"
+        }).next().on(ace.click_event, function () {
+            $(this).prev().focus();
+        });
+    });
+
     $("#nombreArchivoExp").fileInput({ file: $("#codArchivoExp").val(), fileName: "archivoExpFile", ctrlCleanDelete: ["codArchivoExp"] });
     $("#btnGuardarExperiencia").click(function () {
         $("#frmRegistroExperiencia").updateValidation();
@@ -94,6 +109,7 @@
         if (resultText == "") return;
 
         var result = jQuery.parseJSON(resultText);
+        mostrarNotificacion(result);
         if (result.Exito) {            
             cargarExperiencias();
             $("#dlgRegistroExperiencia").modal('hide');
