--- a/SAF.Web/Views/BandejaInvitaciones/Index.cshtml
+++ b/SAF.Web/Views/BandejaInvitaciones/Index.cshtml
@@ -56,6 +56,7 @@
     </div>
 </div>
 
+<div class="modal fade" id="modalDetalleInvitacion" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
 @section scripts {
     <script type="text/javascript" language="javascript">
@@ -165,6 +166,19 @@
                     listarInvitaciones();
                 }
             });
+        }
+
+
+        function verAgendaInvitacion(id) {
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("VerDetalleInvitacion", "BandejaInvitaciones")',
+                data: { id : id },
+                success: function (result) {
+                    $("#modalDetalleInvitacion").empty().html(result).modal();
+                }
+            });
+            
         }
 
     </script>
