--- a/SAF.Web/Views/SolReg/Registro.cshtml
+++ b/SAF.Web/Views/SolReg/Registro.cshtml
@@ -350,6 +350,7 @@
                     dataType: "json",
                     success: function (result) {
                         mostrarNotificacion(result);
+                        $("#btnGuardarSolicitud").hide();
                     }
                 });
              
